--- a/src/app/component/fixed-menu/fixed-menu.component.html
+++ b/src/app/component/fixed-menu/fixed-menu.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-  <a class="navbar-brand mb-0 h1" href="#">Reminder</a>
+  <a class="navbar-brand mb-0 h1" href="#">
+    <img src="/assets/brand.png" height="30px">
+    Reminder
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,9 +10,13 @@
     <form class="form-inline mr-2">
       <div class="input-group">
         <input type="text" class="form-control" 
-          placeholder="Procure aqui por um título...">
+          placeholder="Procure aqui por um título..."
+          (keyup)="changeSearch($event)">
       </div>
     </form>
+    <button type="button" class="btn btn-light mr-2">
+      Notificações <span class="badge badge-danger">5</span>
+    </button>
     <button type="button" (click)="menuButtonClick()" class="btn btn-danger">Novo lembrete</button>
   </div>
 </nav>
