--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import './node_modules/bootstrap/scss/bootstrap';
 @import './node_modules/ngx-bootstrap/datepicker/bs-datepicker';
+@import './node_modules/ng-snotify/styles/dark.scss';
 
 body {
   font-family: 'Roboto Mono', monospace;
